// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertMessage should change the icon based on the given type prop 1`] = `
<div
  className="css-1vm9g5e"
>
  <div
    className="css-1vuw43k"
  >
    <div
      className="css-g2jus2"
    />
  </div>
  <div
    className="css-6bx4c3"
  >
    
  </div>
  <div
    className="css-glk0q1"
    onClick={[Function]}
  />
</div>
`;

exports[`AlertMessage should change the icon based on the given type prop 2`] = `
<div
  className="css-1vm9g5e"
>
  <div
    className="css-1vuw43k"
  >
    <div
      className="css-1f1jd2h"
    />
  </div>
  <div
    className="css-6bx4c3"
  >
    
  </div>
  <div
    className="css-glk0q1"
    onClick={[Function]}
  />
</div>
`;

exports[`AlertMessage should change the icon based on the given type prop 3`] = `
<div
  className="css-1vm9g5e"
>
  <div
    className="css-1vuw43k"
  >
    <div
      className="css-rr2n0f"
    />
  </div>
  <div
    className="css-6bx4c3"
  >
    
  </div>
  <div
    className="css-glk0q1"
    onClick={[Function]}
  />
</div>
`;

exports[`AlertMessage should render the given icon if any 1`] = `
<div
  className="css-1vm9g5e"
>
  <div
    className="css-1vuw43k"
  >
    <div>
      Icon
    </div>
  </div>
  <div
    className="css-6bx4c3"
  >
    
  </div>
  <div
    className="css-glk0q1"
    onClick={[Function]}
  />
</div>
`;

exports[`AlertMessage should render the given message 1`] = `
<div
  className="css-1vm9g5e"
>
  <div
    className="css-1vuw43k"
  >
    <div
      className="css-g2jus2"
    />
  </div>
  <div
    className="css-6bx4c3"
  >
    Some important message
  </div>
  <div
    className="css-glk0q1"
    onClick={[Function]}
  />
</div>
`;

exports[`AlertMessage should use the given theme 1`] = `
<div
  className="css-hx30u2"
>
  <div
    className="css-1vuw43k"
  >
    <div
      className="css-g2jus2"
    />
  </div>
  <div
    className="css-6bx4c3"
  >
    
  </div>
  <div
    className="css-exhbb1"
    onClick={[Function]}
  />
</div>
`;
